--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nathaniel's Webpage</title>
 </head>
 <body>
-    
-</body>
+    <h1>Welcome!</h1>
 </html>
