--- a/index.html
+++ b/index.html
@@ -3,8 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nathaniel's Webpage</title>
+    <title>WDD 131 – Dynamic Web Fundamentals - Nathaniel</title>
+    <meta name="description" content="WDD 131 – Dynamic Web Fundamentals. Nathaniel's personal webpage including portfolio and favorite links.">
+    <meta name="author" content="Nathaniel">
+    <link rel="stylesheet" href="base.css">
+    <script src="getdates.js" defer></script>
 </head>
 <body>
-    <h1>Welcome!</h1>
+    <header>
+        <h1>Welcome!</h1>
+        <nav>
+            <ul>
+                <li><a href="https://www.linkedin.com">LinkedIn</a></li>
+                <li><a href="https://byupw.instructure.com/">Canvas</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/study/scriptures">Favorite Scripture</a></li>
+                <li><a href="#">Final Project Folder</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="card">
+            <h2>Card 1 Heading</h2>
+            <img src="path/to/local/image1.jpg" alt="Description of image 1">
+            <p>Content for the first card goes here.</p>
+        </section>
+        <section class="card">
+            <h2>Card 2 Heading</h2>
+            <img src="path/to/local/image2.jpg" alt="Description of image 2">
+            <p>Content for the second card goes here.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; <span id="currentyear"></span> Nathaniel, Zimbabwe.</p>
+        <p id="lastModified"></p>
+    </footer>
+</body>
 </html>
