--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>WDD 131 – Dynamic Web Fundamentals - Nathaniel</title>
     <meta name="description" content="WDD 131 – Dynamic Web Fundamentals. Nathaniel's personal webpage including portfolio and favorite links.">
     <meta name="author" content="Nathaniel">
-    <link rel="stylesheet" href="base.css">
-    <script src="getdates.js" defer></script>
+    <link rel="stylesheet" href="styles/base.css">
+    <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
     <header>
@@ -24,14 +24,18 @@
 
     <main>
         <section class="card">
-            <h2>Card 1 Heading</h2>
-            <img src="path/to/local/image1.jpg" alt="Description of image 1">
-            <p>Content for the first card goes here.</p>
+            <img src="images/image1.jpg" alt="Description of image 1">
+            <div>
+                <h2>About Me</h2>
+                <p>I'm Nathaniel Chigumbura, and I'm from Zimbabwe. You know, like, where the Victoria Falls are? Anyway, I'm really into reading, and I'm just excited to meet new people and chat. I'm hoping to bring some of that Zimbabwean warmth and maybe a little bit of that 'we can figure this out' attitude to the table.</p>
+            </div>
         </section>
         <section class="card">
-            <h2>Card 2 Heading</h2>
-            <img src="path/to/local/image2.jpg" alt="Description of image 2">
-            <p>Content for the second card goes here.</p>
+            <img src="images/image2.jpg" alt="Description of image 2">
+            <div>
+                <h2>Zimbabwe: Home to Victoria Falls</h2>
+                <p>Zimbabwe: Home to Victoria Falls, a nation of rich culture and resilient people, where ancient traditions meet a hopeful, modern spirit.</p>
+            </div>
         </section>
     </main>
 
