--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
     <meta name="description" content="WDD 131 – Dynamic Web Fundamentals. Nathaniel's personal webpage including portfolio and favorite links.">
     <meta name="author" content="Nathaniel">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Welcome!</h1>
+        <h1>WDD 131 – Dynamic Web Fundamentals - Nathaniel</h1>
         <nav>
             <ul>
                 <li><a href="https://www.linkedin.com">LinkedIn</a></li>
                 <li><a href="https://byupw.instructure.com/">Canvas</a></li>
                 <li><a href="https://www.churchofjesuschrist.org/study/scriptures">Favorite Scripture</a></li>
                 <li><a href="#">Final Project Folder</a></li>
+                <li><a href="https://github.com">GitHub</a></li>
+                <li><a href="https://www.codecademy.com">Codecademy</a></li>
+                <li><a href="https://www.w3schools.com">W3Schools</a></li>
             </ul>
         </nav>
     </header>
