--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <h1>WDD 131 – Dynamic Web Fundamentals - Nathaniel</h1>
+        <h1>WDD 131-Dynamic Web Fundamentals - Nathaniel</h1>
         <nav>
             <ul>
                 <li><a href="https://www.linkedin.com">LinkedIn</a></li>
