--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 131 – Dynamic Web Fundamentals - Nathaniel</title>
-    <meta name="description" content="WDD 131 – Dynamic Web Fundamentals. Nathaniel's personal webpage including portfolio and favorite links.">
+    <title>WDD 131 - Dynamic Web Fundamentals - Nathaniel Chigumbura</title>
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals. Nathaniel's personal webpage including portfolio and favorite links.">
     <meta name="author" content="Nathaniel">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
