--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WDD 131 | Media Query | Example</title>
+  <title>WDD 131 - Media Query Example</title>
   <meta name="description" content="Media query learning activity example page.">
   <meta name="author" content="Nathaniel [Your Last Name]">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,4 +23,11 @@
     </section>
     <section>
       <h2>Helaman 12:24</h2>
-      <p>And may God grant, in his great fulness, that men might be brought unto repentance and good works, that they might be restored unto grace for grace
+      <p>And may God grant, in his great fulness, that men might be brought unto repentance and good works, that they might be restored unto grace for grace, according to their works.</p>
+    </section>
+  </main>
+  <footer>
+    Nathaniel Chigumbura
+  </footer>
+</body>
+</html>
