--- a/temples.html
+++ b/temples.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Nathaniel Chigumbura">
+  <meta name="description" content="Explore an album of famous temples around the world, complete with descriptions and stunning images.">
   <title>Temple Album</title>
   <link rel="stylesheet" href="styles/temples.css">
   <link rel="stylesheet" href="styles/temples-large.css">
@@ -22,11 +24,44 @@
   </header>
 
   <main>
-    <h1>Temples Around the World</h1>
-    
+    <h1>Temple Album Around the World</h1>
+    <h2>Explore Famous Temples</h2>
+
     <figure>
-      <img src="images/temple1.jpg" alt="Oakland-California-Temple">
-      <figcaption>Oakland-California-Temple</figcaption>
+      <img src="images/temple1.jpg" alt="Oakland California Temple">
+      <figcaption>Oakland California Temple</figcaption>
+    </figure>
+    <figure>
+      <img src="images/temple2.jpg" alt="Salt Lake City Temple">
+      <figcaption>Salt Lake City Temple</figcaption>
+    </figure>
+    <figure>
+      <img src="images/temple3.jpg" alt="Kyoto Temple">
+      <figcaption>Kyoto Temple</figcaption>
+    </figure>
+    <figure>
+      <img src="images/temple4.jpg" alt="Angkor Wat">
+      <figcaption>Angkor Wat</figcaption>
+    </figure>
+    <figure>
+      <img src="images/temple5.jpg" alt="Brihadeeswara Temple">
+      <figcaption>Brihadeeswara Temple</figcaption>
+    </figure>
+    <figure>
+      <img src="images/temple6.jpg" alt="Temple of Heaven">
+      <figcaption>Temple of Heaven</figcaption>
+    </figure>
+    <figure>
+      <img src="images/temple7.jpg" alt="Wat Rong Khun">
+      <figcaption>Wat Rong Khun</figcaption>
+    </figure>
+    <figure>
+      <img src="images/temple8.jpg" alt="Borobudur Temple">
+      <figcaption>Borobudur Temple</figcaption>
+    </figure>
+    <figure>
+      <img src="images/temple9.jpg" alt="Kinkaku-ji Temple">
+      <figcaption>Kinkaku-ji Temple</figcaption>
     </figure>
   </main>
 
