--- a/temples.html
+++ b/temples.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <h1>Temple Album</h1>
+    <h1>Temple</h1>
     <button class="hamburger-button">☰</button>
     <nav>
       <a href="#">Home</a>
