--- a/temples.html
+++ b/temples.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Nathaniel Chigumbura">
-  <meta name="description" content="Explore an album of famous temples around the world, complete with descriptions and stunning images.">
+  <meta name="description" content="Explore an album of famous temples around the world.">
   <title>Temple Album</title>
   <link rel="stylesheet" href="styles/temples.css">
   <link rel="stylesheet" href="styles/temples-large.css">
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <h1>Temple</h1>
+    <h1>Temple Album</h1>
     <button class="hamburger-button">☰</button>
     <nav>
       <a href="#">Home</a>
