--- a/place.html
+++ b/place.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Nathaniel Chigumbura">
+  <meta name="description" content="A page for Zimbabwe, its culture, weather, and key facts.">
   <title>Zimbabwe</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@300;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/place.css">
   <script src="scripts/place.js" defer></script>
 </head>
@@ -40,6 +43,7 @@
       <p><strong>Conditions:</strong> Sunny</p>
       <p><strong>Wind:</strong> 10 km/h</p>
       <p><strong>Wind Chill:</strong> <span id="windchill">Calculating...</span></p>
+      <img src="images/sunny-icon.svg" alt="Sunny weather icon" style="width: 50px; height: 50px;">
     </section>
   </main>
 
