--- a/place.html
+++ b/place.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Nathaniel Chigumbura">
-  <meta name="description" content="A vibrant webpage exploring Zimbabwe, its culture, weather, and key facts.">
+  <meta name="description" content="A page for Zimbabwe, its culture, weather, and key facts.">
   <title>Zimbabwe</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@300;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/place.css">
