--- a/temples.html
+++ b/temples.html
@@ -6,13 +6,13 @@
   <meta name="author" content="Nathaniel Chigumbura">
   <meta name="description" content="Explore an album of famous temples around the world.">
   <title>Temple Album</title>
-  <link rel="stylesheet" href="styles/temples.css">
-  <link rel="stylesheet" href="styles/temples-large.css">
-  <script src="scripts/temples.js" defer></script>
+  <link rel="stylesheet" href="styles/temple.css">
+  <link rel="stylesheet" href="styles/temple-large.css">
+  <script src="scripts/temple.js" defer></script>
 </head>
 <body>
   <header>
-    <h1>Temple Album</h1>
+    <h1>Explore the Temple Album Around the World</h1>
     <button class="hamburger-button">☰</button>
     <nav>
       <a href="#">Home</a>
@@ -24,7 +24,6 @@
   </header>
 
   <main>
-    <h1>Temple Album Around the World</h1>
     <h2>Explore Famous Temples</h2>
 
     <figure>
