--- a/temples.html
+++ b/temples.html
@@ -6,9 +6,9 @@
   <meta name="author" content="Nathaniel Chigumbura">
   <meta name="description" content="Explore an album of famous temples around the world.">
   <title>Temple Album</title>
-  <link rel="stylesheet" href="styles/temple.css">
-  <link rel="stylesheet" href="styles/temple-large.css">
-  <script src="scripts/temple.js" defer></script>
+  <link rel="stylesheet" href="styles/temples-large.css">
+  <link rel="stylesheet" href="styles/temples.css">
+  <script src="scripts/temples.js" defer></script>
 </head>
 <body>
   <header>
