--- a/place.html
+++ b/place.html
@@ -45,6 +45,7 @@
   </main>
   <footer>
     <p>©2025 Zimbabwe Page</p>
+    <p>Year: <span id="year"></span></p>
     <p>Last Modified: <span id="last-modified"></span></p>
   </footer>
 </body>
