--- a/week04/lazyload.html
+++ b/week04/lazyload.html
@@ -5,17 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta author="Nathaniel Chigumbura">
     <title>LazyLoad</title>
-    <link rel="styles/LazyLoad.css" href="css">
-    <link rel="scripts/LazyLoad.js" href="js">
+    <link rel="stylesheet" href="styles/LazyLoad.css">
+    <script src="scripts/LazyLoad.js"></script>
 </head>
 <body>
     <h1>LazyLoad</h1>
-    <img src="images/LazyLoad1" alt="LazyLoad">
-    <img src="images/LazyLoad2" alt="LazyLoad">
-    <img src="images/LazyLoad3" alt="LazyLoad">
-    <img src="images/LazyLoad4" alt="LazyLoad">
-    <img src="images/LazyLoad5" alt="LazyLoad">
-    <img src="images/LazyLoad6" alt="LazyLoad">
-
+    <img src="images/lazyLoad1.png" alt="LazyLoad">
+    <img src="images/lazyLoad2.png" alt="LazyLoad">
+    <img src="images/LazyLoad3.png" alt="LazyLoad">
+    <img src="images/LazyLoad4.png" alt="LazyLoad">
+    <img src="images/LazyLoad5.png" alt="LazyLoad">
+    <img src="images/LazyLoad6.png" alt="LazyLoad">
 </body>
 </html>
