--- a/week04/lazyload.html
+++ b/week04/lazyload.html
@@ -9,12 +9,21 @@
     <script src="scripts/LazyLoad.js"></script>
 </head>
 <body>
-    <h1>LazyLoad</h1>
-    <img src="images/lazyLoad1.png" alt="LazyLoad">
-    <img src="images/lazyLoad2.png" alt="LazyLoad">
-    <img src="images/LazyLoad3.png" alt="LazyLoad">
-    <img src="images/LazyLoad4.png" alt="LazyLoad">
-    <img src="images/LazyLoad5.png" alt="LazyLoad">
-    <img src="images/LazyLoad6.png" alt="LazyLoad">
+    <header>
+        LazyLoad Header
+    </header>
+
+    <main>
+        <img src="images/lazyLoad1.jpg" alt="LazyLoad" loading="lazy">
+        <img src="images/lazyLoad2.jpg" alt="LazyLoad" loading="lazy">
+        <img src="images/LazyLoad3.jpg" alt="LazyLoad" loading="lazy">
+        <img src="images/LazyLoad4.jpg" alt="LazyLoad" loading="lazy">
+        <img src="images/LazyLoad5.jpg" alt="LazyLoad" loading="lazy">
+        <img src="images/LazyLoad6.jpg" alt="LazyLoad" loading="lazy">
+    </main>
+
+    <footer>
+        &copy; 2025 Nathaniel Chigumbura. All rights reserved.
+    </footer>
 </body>
 </html>
