--- a/temples.html
+++ b/temples.html
@@ -25,43 +25,44 @@
 
   <main>
     <h2>Explore Famous Temples</h2>
-
-    <figure>
-      <img src="images/temple1.jpg" alt="Oakland California Temple">
-      <figcaption>Oakland California Temple</figcaption>
-    </figure>
-    <figure>
-      <img src="images/temple2.jpg" alt="Salt Lake City Temple">
-      <figcaption>Salt Lake City Temple</figcaption>
-    </figure>
-    <figure>
-      <img src="images/temple3.jpg" alt="Kyoto Temple">
-      <figcaption>Kyoto Temple</figcaption>
-    </figure>
-    <figure>
-      <img src="images/temple4.jpg" alt="Angkor Wat">
-      <figcaption>Angkor Wat</figcaption>
-    </figure>
-    <figure>
-      <img src="images/temple5.jpg" alt="Brihadeeswara Temple">
-      <figcaption>Brihadeeswara Temple</figcaption>
-    </figure>
-    <figure>
-      <img src="images/temple6.jpg" alt="Temple of Heaven">
-      <figcaption>Temple of Heaven</figcaption>
-    </figure>
-    <figure>
-      <img src="images/temple7.jpg" alt="Wat Rong Khun">
-      <figcaption>Wat Rong Khun</figcaption>
-    </figure>
-    <figure>
-      <img src="images/temple8.jpg" alt="Borobudur Temple">
-      <figcaption>Borobudur Temple</figcaption>
-    </figure>
-    <figure>
-      <img src="images/temple9.jpg" alt="Kinkaku-ji Temple">
-      <figcaption>Kinkaku-ji Temple</figcaption>
-    </figure>
+    <div class="templeimages">
+      <figure>
+        <img src="images/temple1.jpg" alt="Oakland California Temple">
+        <figcaption>Oakland California Temple</figcaption>
+      </figure>
+      <figure>
+        <img src="images/aba_nigeria_temple_lds-min.jpeg" alt="Aba Nigeria Temple">
+        <figcaption>Aba Nigeria Temple</figcaption>
+      </figure>
+      <figure>
+        <img src="images/abuquerque_temple_lds (1)-min.jpeg" alt="Abuquerque Temple">
+        <figcaption>Abuquerque Temple</figcaption>
+      </figure>
+      <figure>
+        <img src="images/accra_ghana_temple_lds-min.jpeg" alt="Accra Ghana Temple">
+        <figcaption>Accra Ghana Temple</figcaption>
+      </figure>
+      <figure>
+        <img src="images/adelaide_australia_temple_lds-min.jpeg" alt="Adelaide Australia Temple">
+        <figcaption>Adelaide Australia Temple</figcaption>
+      </figure>
+      <figure>
+        <img src="images/anchorage_alaska_temple_lds-min.jpeg" alt="Anchorage Alaska Temple">
+        <figcaption>Anchorage Alaska Temple</figcaption>
+      </figure>
+      <figure>
+        <img src="images/apia_samoa_temple_lds-min.jpeg" alt="Apia Samoa Temple">
+        <figcaption>Apia Samoa Temple</figcaption>
+      </figure>
+      <figure>
+        <img src="images/barranquilla_columbia_temple_exterior-min.jpeg" alt="Barranquilla Columbia Temple">
+        <figcaption>Barranquilla Columbia Temple</figcaption>
+      </figure>
+      <figure>
+        <img src="images/peru temple-min.jpg" alt="Peru Temple">
+        <figcaption>Peru Temple</figcaption>
+      </figure>
+    </div>
   </main>
 
   <footer>
