--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="styles/filtered-temples-large.css">
   <link rel="stylesheet" href="styles/filtered-temples.css">
   <script src="scripts/filtered-temples.js" defer></script>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <header>
