--- a/form.html
+++ b/form.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Product Review Form</title>
-  <meta name="description" content="Submit reviews for products in a user-friendly and responsive form. Track total reviews on the confirmation page.">
+  <meta name="description" content="Submit reviews for products.">
   <meta name="author" content="Nathaniel Chigumbura">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
-  <script src="form.js" defer></script>
+  <link rel="stylesheet" href="styles/form.css">
+  <script src="scripts/form.js" defer></script>
 </head>
 <body>
   <header>
