--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -44,6 +44,8 @@
     </main>
     <footer>
         <p>Created by Nathaniel | All rights reserved</p>
+        <p>Wireframe link for both smal and large view</p>
+        <p>https://app.moqups.com/CW7LLdRNWgcR5cLWimLfD92r7cwTMIXb/view/page/ad64222d5?ui=0</p>
     </footer>
 </body>
 </html>
