--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Planning Document</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/siteplan.css">
 </head>
 <body>
     <header>
@@ -44,8 +44,6 @@
     </main>
     <footer>
         <p>Created by Nathaniel | All rights reserved</p>
-        <p>Wireframe link for both smal and large view</p>
-        <p>https://app.moqups.com/CW7LLdRNWgcR5cLWimLfD92r7cwTMIXb/view/page/ad64222d5?ui=0</p>
     </footer>
 </body>
 </html>
