--- a/project/recommendations.html
+++ b/project/recommendations.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Harare Recommendations</h1>
+        <h1>Discover Harare - Recommendations</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,22 +19,21 @@
             </ul>
         </nav>
     </header>
+
     <main>
-        <section>
-            <h2>Share Your Favorite Spot</h2>
-            <form id="recommendation-form">
-                <label for="spot">Favorite Spot:</label>
-                <input type="text" id="spot" name="spot" required>
-                <button type="submit">Submit</button>
-            </form>
-            <div id="recommendations">
-                <h3>Recommendations:</h3>
-                <ul id="recommendations-list"></ul>
-            </div>
+        <section id="intro">
+            <h2>Best Places to Eat, Relax, and Stay</h2>
+            <p>Whether you're craving fine dining, looking for cozy cafes, or searching for top-rated hotels, we've got you covered.</p>
+        </section>
+
+        <section id="recommendations">
+            <h2>Our Recommendations</h2>
+            <div id="recommendations-container"></div>
         </section>
     </main>
+
     <footer>
-        <p>&copy; 2025 Discover Harare</p>
+        <p>&copy; 2025 Discover Harare. All rights reserved.</p>
     </footer>
 </body>
 </html>
